--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ perl:
   - "5.12"
   - "5.10"
   - "5.8"
-before_script: travis/setup.pl
+before_script: .travis/setup.pl
 script: bundle exec perl Makefile.PL lib=libssh2/lib inc=libss2/include && make test
