use better name for libssh2 installation script

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ perl:
   - "5.8"
 
 install:
-  - perl .travis/setup.pl
+  - perl .travis/install-libssh2.pl
   - cpanm Module::Install::CheckLib
 
 script:
